{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 1187,
  "lineage": "bc303884-1af5-f244-0216-e95ac3082e21",
  "resources": [
    {
      "module": "module.ec2_az1_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "popbl-grupo1-Auth-Log-Microservice",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-07ee5a7626a3c4156",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ee5a7626a3c4156",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c679daf820b61dc",
            "private_dns": "ip-10-0-11-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093bc8e2f1fc17bbe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028ecc336e6a84f04",
            "tags": {
              "Name": "popbl-grupo1-Auth-Log-Microservice"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Auth-Log-Microservice"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "popbl-grupo1-Consul",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-0ed22d7c4d04f0b25",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed22d7c4d04f0b25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f2919edffddf78c",
            "private_dns": "ip-10-0-11-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09a4bf1ebd9983479",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028ecc336e6a84f04",
            "tags": {
              "Name": "popbl-grupo1-Consul"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Consul"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "popbl-grupo1-RabbitMQ",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-064515f83d4e920f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064515f83d4e920f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ef91bff350b6323",
            "private_dns": "ip-10-0-11-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f3114fd42e36618",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028ecc336e6a84f04",
            "tags": {
              "Name": "popbl-grupo1-RabbitMQ"
            },
            "tags_all": {
              "Name": "popbl-grupo1-RabbitMQ"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_az1_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "popbl-grupo1-Custom-Honeypot",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-08c2d5deef6e37837",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c2d5deef6e37837",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0849ab57ddb7cb526",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-44-212-68-124.compute-1.amazonaws.com",
            "public_ip": "44.212.68.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0835dde8bb71fe354",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0719416e07933e398",
            "tags": {
              "Name": "popbl-grupo1-Custom-Honeypot"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Custom-Honeypot"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "popbl-grupo1-Opensource-Honeypot",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-08fd4c11d804699f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fd4c11d804699f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd9765ca7a786e27",
            "private_dns": "ip-10-0-1-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-98-93-237-167.compute-1.amazonaws.com",
            "public_ip": "98.93.237.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00e56b472c2ebc0cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0719416e07933e398",
            "tags": {
              "Name": "popbl-grupo1-Opensource-Honeypot"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Opensource-Honeypot"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_az2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "popbl-grupo1-Auth-Log-Microservice-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-0218617891a93ab48",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0218617891a93ab48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058a7878db62ebd3c",
            "private_dns": "ip-10-0-12-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a2bdbd7bac9b511",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07727b6d56c66ea57",
            "tags": {
              "Name": "popbl-grupo1-Auth-Log-Microservice-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Auth-Log-Microservice-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "popbl-grupo1-Consul-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-0cb66b624e0158943",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb66b624e0158943",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d43599adbab4749",
            "private_dns": "ip-10-0-12-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c04ddd1ae812fd63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07727b6d56c66ea57",
            "tags": {
              "Name": "popbl-grupo1-Consul-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-Consul-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "popbl-grupo1-RabbitMQ-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:975049933544:instance/i-09835d91771787627",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09835d91771787627",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "popbl-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5494f677163b302",
            "private_dns": "ip-10-0-12-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b71e952d58563c4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07727b6d56c66ea57",
            "tags": {
              "Name": "popbl-grupo1-RabbitMQ-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-RabbitMQ-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099c73ecba8cc9266"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.DynamoDB_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:vpc/vpc-0d3935a90ee3f5435",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-071043a36bca2fc66",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0abf03947b5bdc98e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3935a90ee3f5435",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dec947f522c03d4e",
            "owner_id": "975049933544",
            "tags": {
              "Name": "popbl-grupo1-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DynamoDB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:security-group/sg-0dcf70236b6718b0c",
            "description": "Security group for DynamoDB access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcf70236b6718b0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099c73ecba8cc9266"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "popbl-grupo1-DynamoDB-sg",
            "name_prefix": "",
            "owner_id": "975049933544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "popbl-grupo1-DynamoDB-sg"
            },
            "tags_all": {
              "Name": "popbl-grupo1-DynamoDB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.micro_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:security-group/sg-08ed6a49a9b1e2aeb",
            "description": "Security group for SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ed6a49a9b1e2aeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "popbl-grupo1-bastion-sg",
            "name_prefix": "",
            "owner_id": "975049933544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "popbl-grupo1-bastion-sg"
            },
            "tags_all": {
              "Name": "popbl-grupo1-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "micro_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:security-group/sg-099c73ecba8cc9266",
            "description": "Security group for microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099c73ecba8cc9266",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC internal (all TCP)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ed6a49a9b1e2aeb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "popbl-grupo1-micro-sg",
            "name_prefix": "",
            "owner_id": "975049933544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "popbl-grupo1-micro-sg"
            },
            "tags_all": {
              "Name": "popbl-grupo1-micro-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.bastion_sg",
            "module.security.data.aws_vpc.selected",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.default_public",
            "module.vpc.aws_route.private_default",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:internet-gateway/igw-06a3bd70732bdb448",
            "id": "igw-06a3bd70732bdb448",
            "owner_id": "975049933544",
            "tags": {
              "Name": "popbl-grupo1-igw"
            },
            "tags_all": {
              "Name": "popbl-grupo1-igw"
            },
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a3bd70732bdb448",
            "id": "r-rtb-09d32153bb8c97a851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d32153bb8c97a85",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:route-table/rtb-05c6037a04fa98511",
            "id": "rtb-05c6037a04fa98511",
            "owner_id": "975049933544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "popbl-grupo1-private-rt-1"
            },
            "tags_all": {
              "Name": "popbl-grupo1-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:route-table/rtb-0e1b18f4d9814f513",
            "id": "rtb-0e1b18f4d9814f513",
            "owner_id": "975049933544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "popbl-grupo1-private-rt-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:route-table/rtb-09d32153bb8c97a85",
            "id": "rtb-09d32153bb8c97a85",
            "owner_id": "975049933544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a3bd70732bdb448",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "popbl-grupo1-public-rt"
            },
            "tags_all": {
              "Name": "popbl-grupo1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b34cec8f05ebe10",
            "route_table_id": "rtb-05c6037a04fa98511",
            "subnet_id": "subnet-028ecc336e6a84f04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db1863c848c3c568",
            "route_table_id": "rtb-0e1b18f4d9814f513",
            "subnet_id": "subnet-07727b6d56c66ea57"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa04de005cd5c78",
            "route_table_id": "rtb-09d32153bb8c97a85",
            "subnet_id": "subnet-0719416e07933e398"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08869a94482a1b073",
            "route_table_id": "rtb-09d32153bb8c97a85",
            "subnet_id": "subnet-01fb97856a9befc83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:subnet/subnet-028ecc336e6a84f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028ecc336e6a84f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049933544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "popbl-grupo1-private-1"
            },
            "tags_all": {
              "Name": "popbl-grupo1-private-1"
            },
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:subnet/subnet-07727b6d56c66ea57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07727b6d56c66ea57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049933544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "popbl-grupo1-private-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-private-2"
            },
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:subnet/subnet-0719416e07933e398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0719416e07933e398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049933544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "popbl-grupo1-public-1"
            },
            "tags_all": {
              "Name": "popbl-grupo1-public-1"
            },
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:subnet/subnet-01fb97856a9befc83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fb97856a9befc83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049933544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "popbl-grupo1-public-2"
            },
            "tags_all": {
              "Name": "popbl-grupo1-public-2"
            },
            "vpc_id": "vpc-0d3935a90ee3f5435"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049933544:vpc/vpc-0d3935a90ee3f5435",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00397e1cad991c4ac",
            "default_route_table_id": "rtb-0dec947f522c03d4e",
            "default_security_group_id": "sg-0f52b5f8b06a875dd",
            "dhcp_options_id": "dopt-0abf03947b5bdc98e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3935a90ee3f5435",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dec947f522c03d4e",
            "owner_id": "975049933544",
            "tags": {
              "Name": "popbl-grupo1-vpc"
            },
            "tags_all": {
              "Name": "popbl-grupo1-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}